--- a/playmore/premium/index.html
+++ b/playmore/premium/index.html
@@ -333,7 +333,7 @@
     
     </div>
     
-    <center class="mb-30"><a class="button" href="../../playmore">All Plans and Pricing</a></center>
+    <center class="mb-30"><a class="button" href="../playmore/">All Plans and Pricing</a></center>
 
 
 
