--- a/lyric-filters/index.html
+++ b/lyric-filters/index.html
@@ -20,7 +20,7 @@
 <a class="navbar-brand" href="../">Playmore Music</a>
 <ul class="navigation hide-small" id="navExpand">
   
-  <li><a href="../">Home</a></li> <li><a class="" href="../playmore/starter/">Starter</a></li><li><a class="" href="../playmore/premium/">Premium</a></li><li><a class="" href="../sign-up/">Sign Up</a></li></ul>
+  <li><a href="../">Home</a></li> <li><a class="" href="../business-music-plans/starter/">Starter</a></li><li><a class="" href="../business-music-plans/premium/">Premium</a></li><li><a class="" href="../sign-up/">Sign Up</a></li></ul>
 </nav>
 
   
@@ -74,7 +74,10 @@
 
 
 
+
+
 </div>
+<center><a class="button" href="../">Home</a></center>
 
 
 
