--- a/sign-up/index.html
+++ b/sign-up/index.html
@@ -20,7 +20,7 @@
 <a class="navbar-brand" href="../">Playmore Music</a>
 <ul class="navigation hide-small" id="navExpand">
   
-  <li><a href="../">Home</a></li> <li><a class="" href="../playmore/starter/">Starter</a></li><li><a class="" href="../playmore/premium/">Premium</a></li><li><a class="active" href="../sign-up/">Sign Up</a></li></ul>
+  <li><a href="../">Home</a></li> <li><a class="" href="../business-music-plans/starter/">Starter</a></li><li><a class="" href="../business-music-plans/premium/">Premium</a></li><li><a class="active" href="../sign-up/">Sign Up</a></li></ul>
 </nav>
 
   
@@ -29,17 +29,20 @@
 
  
 
+<div class="jumbo-title">
+  <h1 class="h2 inverse shadow">Sign Up</h1>
+</div>
 
-  <h1>Sign Up</h1>
+<div class="wrapper">
 
 
-    <section>
-      
 
 <h3 id="placeholder-for-sign-up-interface">Placeholder For Sign-Up Interface</h3>
 
-    </section>
 
+
+
+</div>
 <center><a class="button" href="../">Home</a></center>
 
 
